--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -13,12 +13,15 @@ jobs:
     - uses: actions/setup-python@v2
       name: Set up Python
       with:
-        python-version: 3.7
+        python-version: 3.9
 
     - name: Install Python dependencies
       run: |
-        pip install poetry
-        poetry install      
+        export POETRY_HOME=/opt/poetry
+        python3 -m venv $POETRY_HOME
+        $POETRY_HOME/bin/pip install poetry==1.2.0
+        $POETRY_HOME/bin/poetry install --without pg,polyBERT --with mordred
+    
     - name: Run tests in tests/ with pytest
       run: |
         poetry run pytest --exitfirst --verbose --failed-first
