--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ name = "psmiles"
 version = "0.6.5"
 description = "A Python package for working with PSMILES (polymer SMILES) strings."
 authors = ["Christopher Kuenneth <christopher.kuenneth@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/Ramprasad-Group/psmiles"
+keywords = ["science", "polymer", "SMILES"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
@@ -10,7 +14,7 @@ numpy = ">1.19.0"
 pandas = ">1.1.0"
 rdkit = ">=2022.3.3"
 scikit-learn = "^1.1.2"
-canonicalize-psmiles = {git = "ssh://git@github.com/Ramprasad-Group/canonicalize_psmiles.git"}
+canonicalize-psmiles = {git = "https://github.com/Ramprasad-Group/canonicalize_psmiles.git"}
 
 [tool.poetry.group.pg]
 optional = true
@@ -26,6 +30,12 @@ mordred = "^1.2.0"
 optional = true
 [tool.poetry.group.polyBERT.dependencies]
 sentence-transformers = "^2.2.0"
+
+[tool.poetry.group.docs]
+optional = true
+[tool.poetry.group.docs.dependencies]
+novella = "^0.2.3"
+pydoc-markdown = {extras = ["novella"], version = "^4.6.3"}
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^22.8.0", allow-prereleases = true}
