--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,39 +9,27 @@ repository = "https://github.com/Ramprasad-Group/psmiles"
 keywords = ["science", "polymer", "SMILES"]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.11"
+python = ">=3.8,<3.11"
 numpy = ">1.19.0"
 pandas = ">1.1.0"
 rdkit = ">=2022.3.3"
 scikit-learn = "^1.1.2"
 canonicalize-psmiles = {git = "https://github.com/Ramprasad-Group/canonicalize_psmiles.git"}
 
-[tool.poetry.group.pg]
-optional = true
-[tool.poetry.group.pg.dependencies]
-pgfingerprinting = {git = "ssh://git@github.com/Ramprasad-Group/pgfingerprinting.git", rev = "main"}
 
-[tool.poetry.group.mordred]
-optional = true
-[tool.poetry.group.mordred.dependencies]
-mordred = "^1.2.0"
+mordred = {version = "^1.2.0", optional = true}
+sentence-transformers = {version = "^2.2.0", optional = true}
+pgfingerprinting = {git = "ssh://git@github.com/Ramprasad-Group/pgfingerprinting.git", rev = "main", optional = true}
 
-[tool.poetry.group.polyBERT]
-optional = true
-[tool.poetry.group.polyBERT.dependencies]
-sentence-transformers = "^2.2.0"
-
-[tool.poetry.group.docs]
-optional = true
-[tool.poetry.group.docs.dependencies]
-novella = "^0.2.3"
-pydoc-markdown = {extras = ["novella"], version = "^4.6.3"}
+[tool.poetry.extras]
+mordred = ["mordred"]
+pg = ["pgfingerprinting"]
+polyBERT = ["sentence-transformers"]
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^22.8.0", allow-prereleases = true}
 
 [tool.poetry.dev-dependencies]
-pdoc3 = "^0.9.1"
 pytest = "^6.2.5"
 ipykernel = "^6.6.1"
 
