--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,9 +19,9 @@ jobs:
       run: |
         export POETRY_HOME=/opt/poetry
         python3 -m venv $POETRY_HOME
-        $POETRY_HOME/bin/pip install poetry==1.2.0
+        $POETRY_HOME/bin/pip install poetry==1.2.1
         $POETRY_HOME/bin/poetry install --without pg,polyBERT --with mordred -v
     
     - name: Run tests in tests/ with pytest
       run: |
-        poetry run pytest --exitfirst --verbose --failed-first
+        $POETRY_HOME/bin/poetry run pytest --exitfirst --verbose --failed-first
