--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -20,8 +20,9 @@ jobs:
         export POETRY_HOME=/opt/poetry
         python3 -m venv $POETRY_HOME
         $POETRY_HOME/bin/pip install poetry==1.2.1
-        $POETRY_HOME/bin/poetry install -E polyBERT -E mordred
+        $POETRY_HOME/bin/poetry install --all-extras
     
     - name: Run tests in tests/ with pytest
       run: |
+        export POETRY_HOME=/opt/poetry
         $POETRY_HOME/bin/poetry run pytest --exitfirst --verbose --failed-first
