--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,15 @@ canonicalize-psmiles = {git = "https://github.com/Ramprasad-Group/canonicalize_p
 
 mordred = {version = "^1.2.0", optional = true}
 sentence-transformers = {version = "^2.2.0", optional = true}
+pydoc-markdown = {version = "^4.6.4", optional = true}
+novella = {version = "^0.2.3", optional = true}
+mkdocs = {version = "^1.4.2", optional = true}
+mkdocs-material = {version = "^8.5.11", optional = true}
 
 [tool.poetry.extras]
 mordred = ["mordred"]
 polyBERT = ["sentence-transformers"]
+docs = ["pydoc-markdown", "novella", "mkdocs", "mkdocs-material"]
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^22.8.0", allow-prereleases = true}
@@ -33,3 +38,8 @@ ipykernel = "^6.6.1"
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.readthedocs-custom-steps]
+script = """
+novella --site-dir _site/html
+"""
