--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,8 +1,16 @@
 version: 2
-mkdocs: {}  # tell readthedocs to use mkdocs
+
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
+
+mkdocs:
+  configuration: "docs/mkdocs.yml"
+
 python:
-  version: 3.7
   install:
-  - method: pip
+  - path: .
     extra_requirements:
     - rtd
+  
