--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -20,7 +20,7 @@ jobs:
         export POETRY_HOME=/opt/poetry
         python3 -m venv $POETRY_HOME
         $POETRY_HOME/bin/pip install poetry==1.2.2
-        $POETRY_HOME/bin/poetry install --all-extras
+        $POETRY_HOME/bin/poetry install -E polyBERT -E mordred
     
     - name: Run tests in tests/ with pytest
       run: |
