--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ rtd = ["readthedocs-custom-steps"]
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^22.8.0", allow-prereleases = true}
+pre-commit = "^2.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
