Use mkdocs to build the documentation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     -   id: check-case-conflict
     -   id: check-json
     -   id: check-yaml
+        args: ['--unsafe']
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: mixed-line-ending
