--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,18 +12,22 @@ repos:
     -   id: check-json
     -   id: check-yaml
         args: ['--unsafe']
+    -   id: check-docstring-first
+    -   id: check-merge-conflict
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: mixed-line-ending
 -   repo: https://github.com/psf/black
-    rev: 22.10.0
+    rev: stable
     hooks:
     -   id: black
+        args: # arguments to configure black
+          - --line-length=88
+          - --include='\.pyi?$'
 -   repo: https://github.com/asottile/blacken-docs
     rev: v1.12.1
     hooks:
     -   id: blacken-docs
-        additional_dependencies: [black==22.10.0]
 -   repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
@@ -34,4 +38,5 @@ repos:
     hooks:
         - id: flake8
           args:
-            - "--max-line-length=140"
+            - "--max-line-length=88"
+            - "--max-complexity=18"
